2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_bus_message_cb):
	  No need to flood stdout with g_message()s if we find an unknown
	  GstMessage type on the bus (Closes: #420253).

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_from_gst_error):
	  Fix ambiguous error message (#420937).

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_set_device_on_element):
	(playbin_source_notify_cb):
	(bacon_video_widget_open_with_subtitle):
	(bacon_video_widget_get_mrls):
	  Remove bacon_video_widget_set_media_device() now that device is
	  passed to _get_mrls(); also actually use the device for cdda URIs
	  (Closes: #422838). Also fixes build with GStreamer backend.

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_add_default_dirs), (totem_add_files),
	(xdg_user_dir_lookup): Use xdg-user-dirs to add some default
	directories to the "Open" dialogues (Closes: #143404)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_set_property),
	(bacon_video_widget_get_property), (bacon_video_widget_get_mrls):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_class_init), (bacon_video_widget_finalize),
	(bacon_video_widget_set_property),
	(bacon_video_widget_get_property),
	(bacon_video_widget_set_media_device),
	(bacon_video_widget_get_mrls):
	* src/backend/bacon-video-widget.h:
	* src/totem-options.c: (totem_options_process_early),
	(totem_options_process_for_server):
	* src/totem-playlist.c: (drop_cb), (totem_playlist_add_one_mrl):
	* src/totem-uri.c: (totem_create_full_path):
	* src/totem.c: (totem_action_load_media),
	(totem_action_load_media_device), (totem_action_play_media),
	(totem_action_drop_files), (totem_action_open_files_list),
	(totem_action_remote):
	* src/totem.h:
