@@ -1,3 +1,8 @@
+2007-03-26  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (totem_action_handle_key_press): Make pause actually
+	pause, and stop pause as well (Closes: #422956)
+
 2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
